--- a/Baccarat/index.html
+++ b/Baccarat/index.html
@@ -15,7 +15,177 @@
   </head>
 
   <body>
-  
+
+    <!-- Cards container -->
+    <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col col-lg-2">
+          <div> 1 of 3</div>
+        </div>
+        <div class="col-md-auto">
+          Line Break
+        </div>
+        <div class="col col-lg-2">
+          3 of 3
+        </div>
+      </div>
+    
+      <!-- Bet form -->
+      <form>
+        <div class="row">
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Banker</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_B" placeholder="Amount">
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Banker Pair</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_BP" placeholder="Amount">
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Player</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_P" placeholder="Amount">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Banker Natural 8</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_BN8" placeholder="Amount" disabled>
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Tie</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_T" placeholder="Amount">
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Player Natural 8</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_PN8" placeholder="Amount" disabled>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Banker Natural 9</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_BN9" placeholder="Amount" disabled>
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Player Pair</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_PP" placeholder="Amount">
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Player Natural 9</span>
+              </div>
+              <input type="number" value="0" min="0" max="1000" step="50" class="form-control" id="chipInput_PN9" placeholder="Amount" disabled>
+            </div>
+          </div>
+        </div>
+
+      </form>
+
+
+      <div class="card border-light mb-3" style="max-width: 18rem;">
+        <div class="card-header font-weight-bold text-center" id="chip-header">Available Chips</div>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold text-center" id="chip-title"></h5>
+        </div>
+      </div>
+
+    
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Payout</button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="payoutLabel">Payout</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <table>
+              <tr>
+                <th>Winning Bet</th>
+                <th>Pays</th>
+              </tr>
+              <tr>
+                <td>Banker</td>
+                <td>1 to 1</td>
+              </tr>
+              <tr>
+                <td>Player</td>
+                <td>1 to 1</td>
+              </tr>
+              <tr>
+                <td>Tie</td>
+                <td>8 to 1</td>
+              </tr>
+              <tr>
+                <td>Player or Banker Pair</td>
+                <td>11 to 1</td>
+              </tr>
+              <tr>
+                <td>Player or Banker Natural 8</td>
+                <td>8 to 1</td>
+              </tr>
+              <tr>
+                <td>Player or Banker Natural 9</td>
+                <td>8 to 1</td>
+              </tr>
+            </table>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <button type="button" class="btn btn-warning" id="restart-btn" disabled>Restart</button>
+
+    <button type="button" class="btn btn-light btn-lg" id="deal-btn" disabled>Deal</button>
+
+    <button type="button" class="btn btn-danger btn-lg" id="play-btn">Play</button>
+
+  </div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -24,6 +194,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="setup.js"></script>
 
-    </body>
+  </body>
 
 </html>
